--- a/VariousProblems/VariousProblems.vcxproj
+++ b/VariousProblems/VariousProblems.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="NoDupes.cpp" />
     <ClCompile Include="RationalDecimals.cpp" />
     <ClCompile Include="Spoj_InterestingNumber.cpp" />
+    <ClCompile Include="Spoj_INVCNT.cpp" />
     <ClCompile Include="Spoj_POUR1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
