--- a/VariousProblems/VariousProblems.vcxproj
+++ b/VariousProblems/VariousProblems.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="RationalDecimals.cpp" />
     <ClCompile Include="Spoj_InterestingNumber.cpp" />
     <ClCompile Include="Spoj_INVCNT.cpp" />
+    <ClCompile Include="Spoj_PALIN.cpp" />
     <ClCompile Include="Spoj_POUR1.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
