Started working on the longest path in tree problems from SPOJ (PT07Z)

--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClCompile Include="Spoj_PALIN.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Apoj_PT07Z.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
