--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="Apoj_PT07Z.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spoj_EDIST.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
