--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -65,10 +65,13 @@
     <ClCompile Include="Spoj_PALIN.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Apoj_PT07Z.cpp">
+    <ClCompile Include="Spoj_EDIST.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Spoj_EDIST.cpp">
+    <ClCompile Include="Spoj_PT07Y.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Spoj_PT07Z.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
