--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClCompile Include="Spoj_PT07Z.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spoj_BYTESM2.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
