--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -80,5 +80,8 @@
     <ClCompile Include="Spoj_STPAR.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spoj_PARTY.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
