--- a/VariousProblems/VariousProblems.vcxproj
+++ b/VariousProblems/VariousProblems.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="Spoj_POUR1.cpp" />
     <ClCompile Include="Spoj_PT07Y.cpp" />
     <ClCompile Include="Spoj_STPAR.cpp" />
+    <ClCompile Include="Spoj_TRT.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
