--- a/VariousProblems/VariousProblems.vcxproj.filters
+++ b/VariousProblems/VariousProblems.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClCompile Include="Spoj_TRT.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Spoj_HOTELS.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
