--- a/VariousProblems/VariousProblems.vcxproj
+++ b/VariousProblems/VariousProblems.vcxproj
@@ -155,6 +155,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3n_plus_1.cpp" />
+    <ClCompile Include="LeetCode_Parens.cpp" />
     <ClCompile Include="Spoj_AIBOHP.cpp" />
     <ClCompile Include="Spoj_BYTESM2.cpp" />
     <ClCompile Include="Spoj_FARIDA.cpp" />
