--- a/VariousProblems/VariousProblems.vcxproj
+++ b/VariousProblems/VariousProblems.vcxproj
@@ -152,11 +152,13 @@
   <ItemGroup>
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="ToString.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="3n_plus_1.cpp" />
     <ClCompile Include="LeetCode_Parens.cpp" />
     <ClCompile Include="Spoj_AIBOHP.cpp" />
+    <ClCompile Include="Spoj_ARRAYSUB.cpp" />
     <ClCompile Include="Spoj_BITMAP.cpp" />
     <ClCompile Include="Spoj_BYTESM2.cpp" />
     <ClCompile Include="Spoj_FARIDA.cpp" />
